--- a/index.html
+++ b/index.html
@@ -18,29 +18,22 @@
     <meta name="twitter:title" content="| Break | WapBorhan |">
     <meta name="twitter:card" value="summary_large_image">
     <meta name="twitter:description" content="| Break | WapBorhan |">
-    
+
     <title>Break Time</title>
     <link rel="stylesheet" href="css/fonts/fonts.css">
     <link rel="stylesheet" href="css/style-main.css">
 
 
-   
+
 
 
 </head>
 
 <body>
-
-
     <!-- Time  -->
-
-
     <link href="https://fonts.googleapis.com/css?family=Orbitron|Text+Me+One" rel="stylesheet">
-
     <div class="container">
-
         <div class="ClockHolder">
-
             <div class="WeekDays">
                 <span>sat</span>
                 <span>sun</span>
@@ -50,21 +43,14 @@
                 <span>thu</span>
                 <span>fri</span>
             </div>
-
             <div class="TimeHolder">
-
                 <div class="TimeOptions">
-
                     <i class="fas fa-clock" data-title="Time"></i>
                     <i class="fas fa-stopwatch" data-title="StopWatch"></i>
                     <i class="far fa-clock" data-title="CountDown"></i>
-
                 </div>
-
                 <div class="Numbers">
-
                     <div class="NumberHolder H1">
-
                         <span class="d1"></span>
                         <span class="d2"></span>
                         <span class="d3"></span>
@@ -72,11 +58,8 @@
                         <span class="d5"></span>
                         <span class="d6"></span>
                         <span class="d7"></span>
-
                     </div>
-
                     <div class="NumberHolder H2">
-
                         <span class="d1"></span>
                         <span class="d2"></span>
                         <span class="d3"></span>
@@ -84,13 +67,9 @@
                         <span class="d5"></span>
                         <span class="d6"></span>
                         <span class="d7"></span>
-
                     </div>
-
                     <span>:</span>
-
                     <div class="NumberHolder M1">
-
                         <span class="d1"></span>
                         <span class="d2"></span>
                         <span class="d3"></span>
@@ -98,11 +77,8 @@
                         <span class="d5"></span>
                         <span class="d6"></span>
                         <span class="d7"></span>
-
                     </div>
-
                     <div class="NumberHolder M2">
-
                         <span class="d1"></span>
                         <span class="d2"></span>
                         <span class="d3"></span>
@@ -110,13 +86,9 @@
                         <span class="d5"></span>
                         <span class="d6"></span>
                         <span class="d7"></span>
-
                     </div>
-
                     <span>:</span>
-
                     <div class="NumberHolder S1">
-
                         <span class="d1"></span>
                         <span class="d2"></span>
                         <span class="d3"></span>
@@ -124,11 +96,8 @@
                         <span class="d5"></span>
                         <span class="d6"></span>
                         <span class="d7"></span>
-
                     </div>
-
                     <div class="NumberHolder S2">
-
                         <span class="d1"></span>
                         <span class="d2"></span>
                         <span class="d3"></span>
@@ -136,49 +105,33 @@
                         <span class="d5"></span>
                         <span class="d6"></span>
                         <span class="d7"></span>
-
                     </div>
-
-
                 </div>
-
                 <div class="AlarmInput">
                     <input type="number" placeholder="Enter Seconds">
                 </div>
-
                 <div class="TimeFormat">
-
                     <div class="Type">
                         <span>12hr</span>
                         <span class="active">24hr</span>
                     </div>
-
                     <div class="Formats">
                         <span>am</span>
                         <span>pm</span>
                     </div>
-
                     <div class="control">
-
                         <span class="Start active"><i class="fas fa-play"></i>Start</span>
                         <span class="Pause"><i class="fas fa-pause"></i>Pause</span>
                         <span class="Stop active"><i class="fas fa-stop"></i>Stop</span>
-
                     </div>
-
                 </div>
-
             </div>
-
         </div>
-
     </div>
     <!-- Time  -->
-
     <div class="messaged  message-cont glowing-text2">
         আসর নামাজের বিরতি
     </div>
-
     <marquee class="messaged  message-cont glowing-text" behavior="" direction="">
         বিরতি চলছে, বিরতির পরে আমরা ফিরবো।
     </marquee>
@@ -188,16 +141,15 @@
         <h2> মিনিট পরে</h2>
     </div>
 
-    <!-- CountDown  -->
-
     <div id="footer-post">
         <div class="text-effect">
             <span>Design By</span>
-        </div> <a class='footer-3' href="http://wapborhan.com/">Borhan Uddin</a>
+        </div> <a class="footer-3" href="http://wapborhan.com/">Borhan Uddin</a>
     </div>
-
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="js/custom-main.js"></script>
-    <!-- CountDown  -->
 
-</body></html>
+
+</body>
+
+</html>
